"couldn't allocate secure memory to keep passwords and or keys from being written to the disk"
After booting my computer, I see in my journal:
Jul 02 06:42:26 chargestone-cave gnome-keyring-daemon[1908]: couldn't allocate secure memory to keep passwords and or keys from being written to the disk
That looks bad.